tests/ui/issues/issue-44405.stderr
error[E0596]: cannot borrow data in an index of `Container` as mutable
  --> $DIR/issue-44405.rs:21:5
   |
LL |     container[&mut val].test();
   |     ^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable
   |
   = help: trait `IndexMut` is required to modify indexed content, but it is not implemented for `Container`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
